# ANI-Ecosystem-Services-Quantification

./: .gitignore  CMakeLists.txt  README.md  dataset.py  main.cpp  visualization.py
data/raw/: ani-landcover.tif  ani-lossyear.tif
